# fer

./: .editorconfig  .gitattributes  Cargo.toml  README.md
compiler/: ferry.fer
compiler-rs/: Cargo.toml
compiler-rs/infra/: Cargo.toml  README.md
compiler-rs/infra/src/: lib.rs  profile.rs  span.rs  symbol.rs
compiler-rs/infra/src/diag/: diagnostic.rs  diagnostic_bag.rs  mod.rs
compiler-rs/infra/tests/: diag_tests.rs  profile_tests.rs  span_tests.rs  symbol_tests.rs
compiler-rs/query/: Cargo.toml  README.md
compiler-rs/query/src/: db.rs  lib.rs  query.rs
compiler-rs/query/tests/: query_tests.rs
compiler-rs/src/lexer/: mod.rs
compiler-rs/src/parser/: ast.rs  mod.rs
compiler-rs/syntax/: Cargo.toml  README.md
compiler-rs/syntax/src/: cst.rs  grammar.rs  lex.rs  lib.rs
compiler-rs/syntax/src/parse/: error.rs  expr.rs  mod.rs  module.rs  pattern.rs  stmt.rs
compiler-rs/syntax/tests/: parse_expr_tests.rs  parse_module_tests.rs  parse_stmt_tests.rs
compiler-rs/vfs/: Cargo.toml  README.md
compiler-rs/vfs/src/: lib.rs  overlay.rs  path.rs  source.rs  watcher.rs
compiler-rs/vfs/tests/: vfs_tests.rs
compiler/src/: main.fer
compiler/src/interpreter/: value.rs
examples/: condition.fer  constants.fer  example.fer  function.fer  hello.fer  string.fer
src/: main.rs
src/interpreter/: env.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
tools/vscode/: language-configuration.json  package.json
tools/vscode/syntaxes/: fer.tmLanguage.json
tools/vscode/themes/: fer-color-theme.json
